guestbook-app/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: guestbook
    tier: frontend
